--- a/nos diferent type de bocal.html
+++ b/nos diferent type de bocal.html
@@ -27,20 +27,8 @@
         </a>
 <body>
     <div class="nouveautes-page">
-        <h1>nos taille de bocale </h1>
-        <article>
-            <h2>200ml</h2>
-            <p>notre plus petite taille disponible parfaite pour les cuisine et les salle de bain surtout pour la décoration</p>
-        </article>
-        <article>
-            <h2>500ml</h2>
-            <p>notre taille moyenne utilisée generalement pour les salle a manger ou les grenier </p>
-        </article>
-        <article>
-            <h2>1L</h2>
-        <p>notre plus grosse taille vendue en 1 seule exmplaire au petit prix de 200 milliard d'euro </p>
-    </article>
-        <!-- Ajoute plus d'articles ici -->
-    </div>
+        <h1>YOU GOT TROLL  </h1>
+        <h2>ceci est fictif et non réelle </h2>
+       <h3>travaille crée par maxence 3'D suite au projet fait en art plastique </h3>
 </body>
 </html>
