--- a/nos diferent type de bocal.html
+++ b/nos diferent type de bocal.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head> </head>
+<head> <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YOU GOT TROLL</title></head>
 <body>
     <div class="nouveautes-page">
         <h1>YOU GOT TROLL  </h1>
